--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 02:04:00 PM</p>
+    <p class="lastupdate">09/05/2020 02:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">106.3&#176;F</td>
+        <td class="data">106.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">106.3&#176;F</td>
+        <td class="data">106.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">106.3&#176;F</td>
+        <td class="data">106.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.7&#176;F</td>
+        <td class="data">49.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">16%</td>
+        <td class="data">15%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.889 inHg (-0.062)</td>
+        <td class="data">29.890 inHg (-0.060)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NW (315&#176;)</td>
+        <td class="data">2 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">82.3&#176;F</td>
+        <td class="data">82.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,20 +153,20 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:03:16 PM">
-            106.3</span><br/>
+          <span title="02:08:04 PM">
+            106.8</span><br/>
           <span title="06:57:03 AM">
             61.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:03:16 PM (Saturday)">
-            106.3</span><br/>
+          <span title="02:08:04 PM (Saturday)">
+            106.8</span><br/>
           <span title="06:21:16 AM (Sunday)">
             49.7</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/05/2020 02:03:16 PM">
-            106.3</span><br/>
+          <span title="09/05/2020 02:08:04 PM">
+            106.8</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
@@ -187,16 +187,16 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:03:16 PM" class="hival">
-            106.3</span>
+          <span title="02:08:04 PM" class="hival">
+            106.8</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:03:16 PM (Saturday)" class="hival">
-            106.3</span>
+          <span title="02:08:04 PM (Saturday)" class="hival">
+            106.8</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/05/2020 02:03:16 PM" class="hival">
-            106.3</span>
+          <span title="09/05/2020 02:08:04 PM" class="hival">
+            106.8</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/16/2020 03:43:16 PM" class="hival">
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="10:28:34 AM">
             56.1</span><br/>
-          <span title="06:23:41 AM">
-            49.4</span>
+          <span title="02:08:22 PM">
+            49.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:24:38 PM (Wednesday)">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:20:27 AM">
             67</span><br/>
-          <span title="01:59:50 PM">
-            16</span>
+          <span title="02:08:22 PM">
+            15</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:37:07 AM (Thursday)">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:30:02 AM">
             29.969</span><br/>
-          <span title="02:03:02 PM">
-            29.889</span>
+          <span title="02:06:02 PM">
+            29.887</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:40:02 AM (Wednesday)">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:00:02 PM">
-            82.3</span><br/>
+          <span title="02:04:02 PM">
+            82.4</span><br/>
           <span title="06:33:01 AM">
             74.1</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 23 hours, 17 minutes</td>
+      <td class="data">3 days, 23 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 23 hours, 17 minutes</td>
+      <td class="data">3 days, 23 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
