--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 02:24:00 PM</p>
+    <p class="lastupdate">09/05/2020 02:29:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">106.8&#176;F</td>
+        <td class="data">106.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">106.8&#176;F</td>
+        <td class="data">106.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">106.8&#176;F</td>
+        <td class="data">106.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">49.3&#176;F</td>
+        <td class="data">49.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.884 inHg (-0.064)</td>
+        <td class="data">29.881 inHg (-0.065)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph ENE (68&#176;)</td>
+        <td class="data">2 mph NE (45&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">82.7&#176;F</td>
+        <td class="data">82.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:30:02 AM">
             29.969</span><br/>
-          <span title="02:22:02 PM">
-            29.882</span>
+          <span title="02:24:02 PM">
+            29.880</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:40:02 AM (Wednesday)">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:18:02 PM">
-            82.7</span><br/>
+          <span title="02:26:02 PM">
+            82.8</span><br/>
           <span title="06:33:01 AM">
             74.1</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 23 hours, 37 minutes</td>
+      <td class="data">3 days, 23 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 23 hours, 37 minutes</td>
+      <td class="data">3 days, 23 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
