--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 02:39:00 PM</p>
+    <p class="lastupdate">09/05/2020 02:44:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">107.2&#176;F</td>
+        <td class="data">107.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">107.2&#176;F</td>
+        <td class="data">107.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">107.2&#176;F</td>
+        <td class="data">107.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">49.7&#176;F</td>
+        <td class="data">49.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.878 inHg (-0.063)</td>
+        <td class="data">29.876 inHg (-0.065)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph S (180&#176;)</td>
+        <td class="data">2 mph E (90&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">83.0&#176;F</td>
+        <td class="data">83.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,20 +153,20 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:16:36 PM">
-            107.4</span><br/>
+          <span title="02:42:34 PM">
+            107.5</span><br/>
           <span title="06:57:03 AM">
             61.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:16:36 PM (Saturday)">
-            107.4</span><br/>
+          <span title="02:42:34 PM (Saturday)">
+            107.5</span><br/>
           <span title="06:21:16 AM (Sunday)">
             49.7</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/05/2020 02:16:36 PM">
-            107.4</span><br/>
+          <span title="09/05/2020 02:42:34 PM">
+            107.5</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
@@ -187,16 +187,16 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:16:36 PM" class="hival">
-            107.4</span>
+          <span title="02:42:34 PM" class="hival">
+            107.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:16:36 PM (Saturday)" class="hival">
-            107.4</span>
+          <span title="02:42:34 PM (Saturday)" class="hival">
+            107.5</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/05/2020 02:16:36 PM" class="hival">
-            107.4</span>
+          <span title="09/05/2020 02:42:34 PM" class="hival">
+            107.5</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/16/2020 03:43:16 PM" class="hival">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:30:02 AM">
             29.969</span><br/>
-          <span title="02:31:02 PM">
-            29.878</span>
+          <span title="02:39:02 PM">
+            29.875</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:40:02 AM (Wednesday)">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          5
+          6
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          194
+          193
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:34:02 PM">
-            83.0</span><br/>
+          <span title="02:40:02 PM">
+            83.1</span><br/>
           <span title="06:33:01 AM">
             74.1</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 23 hours, 52 minutes</td>
+      <td class="data">3 days, 23 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 23 hours, 52 minutes</td>
+      <td class="data">3 days, 23 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
