--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 03:04:00 PM</p>
+    <p class="lastupdate">09/05/2020 03:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">109.1&#176;F</td>
+        <td class="data">110.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">109.1&#176;F</td>
+        <td class="data">110.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">109.1&#176;F</td>
+        <td class="data">110.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.3&#176;F</td>
+        <td class="data">43.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">13%</td>
+        <td class="data">11%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.866 inHg (-0.075)</td>
+        <td class="data">29.867 inHg (-0.070)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">2 mph ESE (112&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">83.6&#176;F</td>
+        <td class="data">83.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,20 +153,20 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:03:56 PM">
-            109.1</span><br/>
+          <span title="03:08:52 PM">
+            110.1</span><br/>
           <span title="06:57:03 AM">
             61.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:03:56 PM (Saturday)">
-            109.1</span><br/>
+          <span title="03:08:52 PM (Saturday)">
+            110.1</span><br/>
           <span title="06:21:16 AM (Sunday)">
             49.7</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/05/2020 03:03:56 PM">
-            109.1</span><br/>
+          <span title="09/05/2020 03:08:52 PM">
+            110.1</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
@@ -187,16 +187,16 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="03:03:56 PM" class="hival">
-            109.1</span>
+          <span title="03:08:52 PM" class="hival">
+            110.1</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:03:56 PM (Saturday)" class="hival">
-            109.1</span>
+          <span title="03:08:52 PM (Saturday)" class="hival">
+            110.1</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/05/2020 03:03:56 PM" class="hival">
-            109.1</span>
+          <span title="09/05/2020 03:08:52 PM" class="hival">
+            110.1</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/16/2020 03:43:16 PM" class="hival">
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="10:28:34 AM">
             56.1</span><br/>
-          <span title="03:03:00 PM">
-            47.2</span>
+          <span title="03:07:18 PM">
+            43.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:24:38 PM (Wednesday)">
@@ -249,8 +249,8 @@
         <td class="data new_row hilo_month">
           <span title="09/02/2020 01:24:38 PM">
             59.6</span><br/>
-          <span title="09/04/2020 04:43:42 PM">
-            43.9</span>
+          <span title="09/05/2020 03:07:18 PM">
+            43.4</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/14/2020 10:10:13 AM">
@@ -271,20 +271,20 @@
         <td class="data new_row hilo_day">
           <span title="06:20:27 AM">
             67</span><br/>
-          <span title="03:03:00 PM">
-            13</span>
+          <span title="03:07:18 PM">
+            11</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:37:07 AM (Thursday)">
             93</span><br/>
-          <span title="04:43:42 PM (Friday)">
-            13</span>
+          <span title="03:07:18 PM (Saturday)">
+            11</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 06:37:07 AM">
             93</span><br/>
-          <span title="09/04/2020 04:43:42 PM">
-            13</span>
+          <span title="09/05/2020 03:07:18 PM">
+            11</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="06/21/2020 07:07:00 AM">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:02:02 PM">
-            83.6</span><br/>
+          <span title="03:06:02 PM">
+            83.7</span><br/>
           <span title="06:33:01 AM">
             74.1</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 0 hours, 17 minutes</td>
+      <td class="data">4 days, 0 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 0 hours, 17 minutes</td>
+      <td class="data">4 days, 0 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
