--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 03:09:00 PM</p>
+    <p class="lastupdate">09/05/2020 03:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">110.1&#176;F</td>
+        <td class="data">110.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">110.1&#176;F</td>
+        <td class="data">110.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">110.1&#176;F</td>
+        <td class="data">110.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">43.7&#176;F</td>
+        <td class="data">46.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">11%</td>
+        <td class="data">12%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.867 inHg (-0.070)</td>
+        <td class="data">29.861 inHg (-0.073)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph ESE (112&#176;)</td>
+        <td class="data">3 mph SSE (158&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">83.7&#176;F</td>
+        <td class="data">83.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,20 +153,20 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:08:52 PM">
-            110.1</span><br/>
+          <span title="03:12:38 PM">
+            110.7</span><br/>
           <span title="06:57:03 AM">
             61.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:08:52 PM (Saturday)">
-            110.1</span><br/>
+          <span title="03:12:38 PM (Saturday)">
+            110.7</span><br/>
           <span title="06:21:16 AM (Sunday)">
             49.7</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/05/2020 03:08:52 PM">
-            110.1</span><br/>
+          <span title="09/05/2020 03:12:38 PM">
+            110.7</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
@@ -187,16 +187,16 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="03:08:52 PM" class="hival">
-            110.1</span>
+          <span title="03:12:38 PM" class="hival">
+            110.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:08:52 PM (Saturday)" class="hival">
-            110.1</span>
+          <span title="03:12:38 PM (Saturday)" class="hival">
+            110.7</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/05/2020 03:08:52 PM" class="hival">
-            110.1</span>
+          <span title="09/05/2020 03:12:38 PM" class="hival">
+            110.7</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/16/2020 03:43:16 PM" class="hival">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:30:02 AM">
             29.969</span><br/>
-          <span title="03:03:02 PM">
-            29.866</span>
+          <span title="03:13:02 PM">
+            29.861</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:40:02 AM (Wednesday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          6
+          7
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:06:02 PM">
-            83.7</span><br/>
+          <span title="03:10:02 PM">
+            83.8</span><br/>
           <span title="06:33:01 AM">
             74.1</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">4 days, 0 hours, 22 minutes</td>
+      <td class="data">4 days, 0 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">4 days, 0 hours, 22 minutes</td>
+      <td class="data">4 days, 0 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
